# AndraeusAi-research

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  PAPER.md  README.md  RESEARCH_NOTES.md  SCIENCE.md  SECURITY.md  SOCIAL_POSTS.md  deploy_to_gpu.py  pyproject.toml  requirements.txt  setup.py  train_personal_ai.py  train_simple.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  licensing_inquiry.md
.github/workflows/: ci.yml
BUSINESS/: ABN_REGISTRATION.md  INVOICE_TEMPLATE.md  LICENSE_AGREEMENT_TEMPLATE.md  PROVISIONAL_PATENT.md  STRIPE_SETUP.md  TRADEMARK.md
andraeus/: __init__.py  config.py  core.py
evaluation/: METHODOLOGY.md  ablation_results.json  ablation_study.py  baseline_rag.py  baseline_results.json  before_after_comparison.py  comparison_results.json  config_imports.py  depth_experiment.py  depth_results.json  eval_framework.py  extreme_results.json  improved_evaluation.py  results_summary.csv  results_template.csv  results_tracker.py  run_all_scientific_tests.py  run_baseline_comparison_test.py  run_capability_preservation_test.py  run_comprehensive_test.py  run_enterprise_simulation.py  run_experiments.py  run_extreme_test.py  run_finetune_baseline.py  run_forgetting_test.py  run_generalization_test.py  run_interference_test.py  run_latency_benchmark.py  run_real_ablation.py  run_real_baseline.py  run_real_depth.py  run_scale_1000_test.py  run_scale_test.py  run_statistical_power_test.py  run_stress_test.py  stats_utils.py  stress_results.json
evaluation/comprehensive_results/: comprehensive_report_20251213_131938.txt  comprehensive_report_20251213_132805.txt  comprehensive_report_20251213_133629.txt  comprehensive_report_20251213_134455.txt  comprehensive_report_20251214_001205.txt  comprehensive_results_20251213_131938.json  comprehensive_results_20251213_132805.json  comprehensive_results_20251213_133629.json  comprehensive_results_20251213_134455.json  comprehensive_results_20251214_001205.json
examples/: user_config.json
extensions/: live_context_server.py  professional_config.py
tests/: __init__.py  test_config.py  test_core.py  test_stats_utils.py
