[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "andraeus-ai"
version = "2.2.0"
authors = [
    { name = "Rocco Andraeus Sergi", email = "andraeusbeats@gmail.com" }
]
description = "Question variation methodology for personal fact encoding in fine-tuned LLMs"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
keywords = [
    "artificial-intelligence",
    "machine-learning",
    "large-language-models",
    "personalization",
    "fine-tuning",
    "qlora",
    "context-window",
]
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.36.0",
    "datasets>=2.14.0",
    "peft>=0.6.0",
    "trl>=0.24.0",
    "bitsandbytes>=0.41.0",
    "accelerate>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "flake8-docstrings>=1.7.0",
    "flake8-bugbear>=23.0.0",
    "bandit>=1.7.0",
    "safety>=2.3.0",
]
eval = [
    "rouge-score>=0.1.2",
    "nltk>=3.8.0",
    "scikit-learn>=1.3.0",
]

[project.urls]
Homepage = "https://github.com/rmerg639/AndraeusAi-research"
Documentation = "https://github.com/rmerg639/AndraeusAi-research"
Repository = "https://github.com/rmerg639/AndraeusAi-research"
Issues = "https://github.com/rmerg639/AndraeusAi-research/issues"

[tool.setuptools]
packages = ["andraeus"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.coverage.run]
source = ["andraeus"]
omit = ["tests/*", "evaluation/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.bandit]
exclude_dirs = ["tests", "evaluation"]
skips = ["B101", "B311"]
